# server/docs/swagger.json
@@ -9,6 +9,38 @@
     "host": "localhost:9600",
     "basePath": "/api/v1",
     "paths": {
+        "/base/auth/wxlogin": {
+            "get": {
+                "description": "微信授权登录",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户模块"
+                ],
+                "summary": "微信授权登录",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户apiid",
+                        "name": "code",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/base.User"
+                        }
+                    }
+                }
+            }
+        },
         "/base/users": {
             "get": {
                 "security": [
